// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`appendResponseMessages > after assistant message > adds assistant text response 1`] = `
[
  {
    "content": "User wants a tool invocation",
    "createdAt": 1970-01-01T00:00:00.123Z,
    "id": "1",
    "parts": [
      {
        "text": "User wants a tool invocation",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": "This is a response from the assistant.",
    "createdAt": 1970-01-01T00:00:00.456Z,
    "id": "2",
    "parts": [
      {
        "toolInvocation": {
          "args": {
            "query": "some query",
          },
          "result": {
            "answer": "Tool result data",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "call-1",
          "toolName": "some-tool",
        },
        "type": "tool-invocation",
      },
      {
        "type": "step-start",
      },
      {
        "text": "This is a response from the assistant.",
        "type": "text",
      },
    ],
    "reasoning": undefined,
    "role": "assistant",
    "toolInvocations": [
      {
        "args": {
          "query": "some query",
        },
        "result": {
          "answer": "Tool result data",
        },
        "state": "result",
        "step": 0,
        "toolCallId": "call-1",
        "toolName": "some-tool",
      },
    ],
  },
]
`;

exports[`appendResponseMessages > after assistant message > adds assistant tool call response 1`] = `
[
  {
    "content": "User wants a tool invocation",
    "createdAt": 1970-01-01T00:00:00.123Z,
    "id": "1",
    "parts": [
      {
        "text": "User wants a tool invocation",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": "",
    "createdAt": 1970-01-01T00:00:00.456Z,
    "id": "2",
    "parts": [
      {
        "toolInvocation": {
          "args": {
            "query": "some query",
          },
          "result": {
            "answer": "Tool result data",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "call-1",
          "toolName": "some-tool",
        },
        "type": "tool-invocation",
      },
      {
        "type": "step-start",
      },
      {
        "toolInvocation": {
          "args": {
            "query": "another query",
          },
          "state": "call",
          "step": 1,
          "toolCallId": "call-2",
          "toolName": "some-tool",
        },
        "type": "tool-invocation",
      },
    ],
    "reasoning": undefined,
    "role": "assistant",
    "toolInvocations": [
      {
        "args": {
          "query": "some query",
        },
        "result": {
          "answer": "Tool result data",
        },
        "state": "result",
        "step": 0,
        "toolCallId": "call-1",
        "toolName": "some-tool",
      },
      {
        "args": {
          "query": "another query",
        },
        "state": "call",
        "step": 1,
        "toolCallId": "call-2",
        "toolName": "some-tool",
      },
    ],
  },
]
`;

exports[`appendResponseMessages > after assistant message > adds tool results to the previously invoked tool calls 1`] = `
[
  {
    "content": "User wants a tool invocation",
    "createdAt": 1970-01-01T00:00:00.123Z,
    "id": "1",
    "parts": [
      {
        "text": "User wants a tool invocation",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": "Placeholder text",
    "createdAt": 1970-01-01T00:00:00.456Z,
    "id": "2",
    "parts": [
      {
        "toolInvocation": {
          "args": {
            "query": "some query",
          },
          "result": {
            "answer": "Tool result data",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "call-1",
          "toolName": "some-tool",
        },
        "type": "tool-invocation",
      },
    ],
    "role": "assistant",
    "toolInvocations": [
      {
        "args": {
          "query": "some query",
        },
        "result": {
          "answer": "Tool result data",
        },
        "state": "result",
        "step": 0,
        "toolCallId": "call-1",
        "toolName": "some-tool",
      },
    ],
  },
]
`;

exports[`appendResponseMessages > after assistant message > appends assistant messages with mixed complex reasoning and text 1`] = `
[
  {
    "content": "User wants a tool invocation",
    "createdAt": 1970-01-01T00:00:00.123Z,
    "id": "1",
    "parts": [
      {
        "text": "User wants a tool invocation",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": "text responsetext response 2",
    "createdAt": 1970-01-01T00:00:00.456Z,
    "id": "2",
    "parts": [
      {
        "toolInvocation": {
          "args": {
            "query": "some query",
          },
          "result": {
            "answer": "Tool result data",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "call-1",
          "toolName": "some-tool",
        },
        "type": "tool-invocation",
      },
      {
        "type": "step-start",
      },
      {
        "details": [
          {
            "signature": "sig-1",
            "text": "reasoning part",
            "type": "text",
          },
          {
            "data": "redacted part",
            "type": "redacted",
          },
        ],
        "reasoning": "reasoning part",
        "type": "reasoning",
      },
      {
        "text": "text response",
        "type": "text",
      },
      {
        "details": [
          {
            "signature": "sig-2",
            "text": "reasoning part 2",
            "type": "text",
          },
        ],
        "reasoning": "reasoning part 2",
        "type": "reasoning",
      },
      {
        "text": "text response 2",
        "type": "text",
      },
    ],
    "reasoning": "reasoning partreasoning part 2",
    "role": "assistant",
    "toolInvocations": [
      {
        "args": {
          "query": "some query",
        },
        "result": {
          "answer": "Tool result data",
        },
        "state": "result",
        "step": 0,
        "toolCallId": "call-1",
        "toolName": "some-tool",
      },
    ],
  },
]
`;

exports[`appendResponseMessages > after user message > adds chain of assistant messages and tool results 1`] = `
[
  {
    "content": "User wants a tool invocation",
    "createdAt": 1970-01-01T00:00:00.123Z,
    "id": "1",
    "parts": [
      {
        "text": "User wants a tool invocation",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": "response",
    "createdAt": 1970-01-01T00:00:00.789Z,
    "id": "2",
    "parts": [
      {
        "type": "step-start",
      },
      {
        "toolInvocation": {
          "args": {
            "query": "some query",
          },
          "result": {
            "answer": "Tool result data",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "call-1",
          "toolName": "some-tool",
        },
        "type": "tool-invocation",
      },
      {
        "type": "step-start",
      },
      {
        "toolInvocation": {
          "args": {
            "query": "another query",
          },
          "result": {
            "answer": "another result",
          },
          "state": "result",
          "step": 1,
          "toolCallId": "call-2",
          "toolName": "some-tool",
        },
        "type": "tool-invocation",
      },
      {
        "type": "step-start",
      },
      {
        "text": "response",
        "type": "text",
      },
    ],
    "reasoning": undefined,
    "role": "assistant",
    "toolInvocations": [
      {
        "args": {
          "query": "some query",
        },
        "result": {
          "answer": "Tool result data",
        },
        "state": "result",
        "step": 0,
        "toolCallId": "call-1",
        "toolName": "some-tool",
      },
      {
        "args": {
          "query": "another query",
        },
        "result": {
          "answer": "another result",
        },
        "state": "result",
        "step": 1,
        "toolCallId": "call-2",
        "toolName": "some-tool",
      },
    ],
  },
]
`;

exports[`appendResponseMessages > after user message > appends assistant messages with generated files 1`] = `
[
  {
    "content": "Generate an image of a cat",
    "createdAt": 1970-01-01T00:00:00.123Z,
    "id": "1",
    "parts": [
      {
        "text": "Generate an image of a cat",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": "",
    "createdAt": 1970-01-01T00:00:00.789Z,
    "id": "123",
    "parts": [
      {
        "type": "step-start",
      },
      {
        "data": "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8/x8AAwMCAO+ip1sAAAAASUVORK5CYII=",
        "mimeType": "image/png",
        "type": "file",
      },
    ],
    "reasoning": undefined,
    "role": "assistant",
    "toolInvocations": [],
  },
]
`;

exports[`appendResponseMessages > after user message > appends assistant messages with mixed complex reasoning and text 1`] = `
[
  {
    "content": "Hello!",
    "createdAt": 1970-01-01T00:00:00.123Z,
    "id": "1",
    "parts": [
      {
        "text": "Hello!",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": "text responsetext response 2",
    "createdAt": 1970-01-01T00:00:00.789Z,
    "id": "123",
    "parts": [
      {
        "type": "step-start",
      },
      {
        "details": [
          {
            "signature": "sig-1",
            "text": "reasoning part",
            "type": "text",
          },
          {
            "data": "redacted part",
            "type": "redacted",
          },
        ],
        "reasoning": "reasoning part",
        "type": "reasoning",
      },
      {
        "text": "text response",
        "type": "text",
      },
      {
        "details": [
          {
            "signature": "sig-2",
            "text": "reasoning part 2",
            "type": "text",
          },
        ],
        "reasoning": "reasoning part 2",
        "type": "reasoning",
      },
      {
        "text": "text response 2",
        "type": "text",
      },
    ],
    "reasoning": "reasoning partreasoning part 2",
    "role": "assistant",
    "toolInvocations": [],
  },
]
`;

exports[`appendResponseMessages > after user message > appends assistant messages with text content 1`] = `
[
  {
    "content": "Hello!",
    "createdAt": 1970-01-01T00:00:00.123Z,
    "id": "1",
    "parts": [
      {
        "text": "Hello!",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": "This is a response from the assistant.",
    "createdAt": 1970-01-01T00:00:00.789Z,
    "id": "123",
    "parts": [
      {
        "type": "step-start",
      },
      {
        "text": "This is a response from the assistant.",
        "type": "text",
      },
    ],
    "reasoning": undefined,
    "role": "assistant",
    "toolInvocations": [],
  },
]
`;

exports[`appendResponseMessages > after user message > handles tool calls and marks them as "call" initially 1`] = `
[
  {
    "content": "User wants a tool invocation",
    "createdAt": 1970-01-01T00:00:00.123Z,
    "id": "1",
    "parts": [
      {
        "text": "User wants a tool invocation",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": "Processing tool call...",
    "createdAt": 1970-01-01T00:00:00.789Z,
    "id": "123",
    "parts": [
      {
        "type": "step-start",
      },
      {
        "text": "Processing tool call...",
        "type": "text",
      },
      {
        "toolInvocation": {
          "args": {
            "query": "some query",
          },
          "state": "call",
          "step": 0,
          "toolCallId": "call-1",
          "toolName": "some-tool",
        },
        "type": "tool-invocation",
      },
    ],
    "reasoning": undefined,
    "role": "assistant",
    "toolInvocations": [
      {
        "args": {
          "query": "some query",
        },
        "state": "call",
        "step": 0,
        "toolCallId": "call-1",
        "toolName": "some-tool",
      },
    ],
  },
]
`;
